# mim-app

./: .gitignore  DESKTOP_UPDATER_SETUP.md  ExamAR.docx  ExamIN.docx  Laporan UTS.docx  UTSInput.xlsx  admin.css  admin.html  admin.js  android-ui.css  chat-module.js  guru.css  guru.html  guru.js  index.html  login.js  mim-notification-sw.js  muhaffiz.html  muhaffiz.js  musyrif.html  musyrif.js  netlify.toml  package-lock.json  package.json  role-page.js  style.css  wakasek-kurikulum.html
docs/: MULTITENANT_ROLLOUT.md  chatgpt-app-auth-linking.md  chatgpt-app-chatgpt-web-test.md  chatgpt-app-connector-draft.md  chatgpt-app-conversation-simulation.md  chatgpt-app-draft-output-schema.json  chatgpt-app-link-code-sample-request.json  chatgpt-app-link-sample-request.json  chatgpt-app-local-http-testing.md  chatgpt-app-mcp-server.md  chatgpt-app-openapi.yaml  chatgpt-app-prompt-template.md  chatgpt-app-readiness-checklist.md  chatgpt-app-revision-modes.md  chatgpt-app-system-instructions.md  chatgpt-app-tool-contract.md  chatgpt-exam-app-roadmap.md  chatgpt-exam-app-sample-request.json  chatgpt-exam-app-test.md  chatgpt-exam-existing-draft-sample-request.json  chatgpt-exam-target-sample-request.json
mimappandroid/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
pages/: alumni.html  alumni.js  ekstrakurikuler-admin.html  ekstrakurikuler-admin.js  guru-detail.html  guru-detail.js  jadwal-ujian.html  jadwal.html  (+32 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+198 files in other folders)
