[package]
name = "mim-desktop"
version = "0.1.0"
description = "Desktop wrapper for MIM web app"
edition = "2021"

[lib]
name = "mim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
base64 = "0.22"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[package.metadata]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
